MVC fully working. Added "war" folder files.

--- a/war/Calc.html
+++ b/war/Calc.html
@@ -41,21 +41,15 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
-
-    <table align="center">
+    
+	<table align="center">
+	  <tr>&nbsp;</tr>	 
+	  <tr><h1>Basic Calculator</h1></tr>
+	  <tr>&nbsp;</tr> 
       <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
+        <td id="calcContainer"></td>                
+      </tr>      
     </table>
-    <div style="align:center;">
-    </div>
+        
   </body>
 </html>
