First data storage of data.

--- a/war/Calc.html
+++ b/war/Calc.html
@@ -46,9 +46,9 @@
 	  <tr>&nbsp;</tr>	 
 	  <tr><h1>Basic Calculator</h1></tr>
 	  <tr>&nbsp;</tr> 
-      <tr>
-        <td id="calcContainer"></td>                
-      </tr>      
+    <tr><td id="calcContainer"></td></tr>
+    <tr>&nbsp;</tr> 
+    <tr id="showDataContainer"></tr> 
     </table>
         
   </body>
