Data dump finished and cleanup.

--- a/war/Calc.html
+++ b/war/Calc.html
@@ -23,7 +23,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="calc/calc.nocache.js"></script>
+    <script type="text/javascript" src="calc/calc.nocache.js"></script>
   </head>
 
   <!--                                           -->
@@ -40,16 +40,10 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-
-    
-	<table align="center">
-	  <tr>&nbsp;</tr>	 
-	  <tr><h1>Basic Calculator</h1></tr>
-	  <tr>&nbsp;</tr> 
-    <tr><td id="calcContainer"></td></tr>
-    <tr>&nbsp;</tr> 
-    <tr id="showDataContainer"></tr> 
-    </table>
+	
+    <div align="center" id="calcContainer" style="margin:32px;"></div>    
+    <div align="center" id="showDataButton"></div>    
+    <div align="center" id="showDataContainer"></div>
         
   </body>
 </html>
